terraform/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turo-deployment
  namespace: kube_namespace
  annotations:
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turo-app
  template:
    metadata:
      labels:
        app: turo-app
    spec:
      containers:
      - name: turo-app-container
        image: docker_image_replace
        volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html/config.html
            subPath: config.html
          - name: html
            mountPath: /usr/share/nginx/html/page2.html
            subPath: page2.html
          - name: html
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
          - name: html
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: nginx.conf
        ports:
          - containerPort: 80
            name: "http"
      volumes:
        - name: "html"
          configMap:
            name: turo-configmap
