terraform/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turo-ingress
  namespace: kube_namespace
  annotations:
    nginx.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:663118211814:certificate/b7966c21-51ec-430e-b6fb-a0410e0af514
    nginx.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    nginx.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: dns_name
spec:
  ingressClassName: nginx
  rules:
  - host: dns_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: turo-service
            port:
              name: "https"
